--- a/simladd/src/styles.css
+++ b/simladd/src/styles.css
@@ -4,20 +4,70 @@
 }
 
 body {
-  background-color: #0f0f0f;
+  background-color: #1f1f1f;
   color: #f0f0f0;
-}
-
-.AND,
-.OR {
-  display: flex;
-  gap: 10px;
-}
-
-.OR {
-  flex-direction: column;
 }
 
 .NOT {
   text-decoration: line-through;
+}
+
+.expression-node {
+  display: flex;
+  border: 1px dashed #424242;
+  border-radius: 5px;
+  padding: 10px;
+  width: fit-content;
+  height: fit-content;
+}
+
+.OR {
+  flex-direction: column;
+  gap: 30px;
+}
+
+.literal-node {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  gap: 13px;
+  width: 105px;
+  height: 105px;
+  text-align: center;
+}
+
+.node-address {
+  cursor: text;
+  font-family: monospace;
+  color: #f0f0f0a0;
+}
+
+.node-address:hover,
+.node-address:focus {
+  color: #f0f0f0;
+}
+
+.node-icon {
+  cursor: grab;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.node-label {
+  cursor: default;
+  font-family: monospace;
+  color: #f0f0f0a0;
+}
+
+.node-icon,
+.node-label {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
