--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -1,22 +1,23 @@
-* {
-  margin: 0;
-  box-sizing: border-box;
+.network {
+  display: flex;
+  justify-content: space-between;
+  border-left: solid 3px var(--color-text);
+  border-right: solid 3px var(--color-text);
+  position: relative;
 }
 
-body {
-  background-color: #1f1f1f;
-  color: #f0f0f0;
-}
-
-.NOT {
-  text-decoration: line-through;
+.network::before {
+  content: "";
+  position: absolute;
+  top: 53px;
+  width: 100%;
+  height: 3px;
+  background: var(--color-text);
+  z-index: -1;
 }
 
 .expression-node {
   display: flex;
-  border: 1px dashed #424242;
-  border-radius: 5px;
-  padding: 10px;
   width: fit-content;
   height: fit-content;
 }
@@ -26,10 +27,11 @@ body {
   gap: 30px;
 }
 
-.literal-node {
+.relay-node {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: var(--color-bg);
   align-items: center;
   border-radius: 5px;
   gap: 13px;
@@ -38,28 +40,25 @@ body {
   text-align: center;
 }
 
-.node-address {
-  cursor: text;
+.NOT {
+  text-decoration: line-through;
+}
+
+.node-address,
+.node-label {
   font-family: monospace;
-  color: #f0f0f0a0;
+  color: var(--color-text-muted);
 }
 
 .node-address:hover,
 .node-address:focus {
-  color: #f0f0f0;
+  color: var(--color-text);
 }
 
 .node-icon {
-  cursor: grab;
   font-family: monospace;
   font-weight: bold;
   font-size: 25px;
-}
-
-.node-label {
-  cursor: default;
-  font-family: monospace;
-  color: #f0f0f0a0;
 }
 
 .node-icon,
