--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -32,6 +32,7 @@
 
 body {
   font-family: var(--font-base);
+  font-size: 15px;
   background-color: var(--color-bg);
   color: var(--color-text);
 }
