--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -1,76 +1,76 @@
 .network {
   display: flex;
   flex-direction: column;
-  gap: 15px;
-  font-size: 12px;
+  gap: 1em;
   font-weight: 500;
 }
 
 .network-nodes {
   display: flex;
   justify-content: space-between;
-  border-left: solid 3px var(--color-text);
-  border-right: solid 3px var(--color-text);
+  border-left: solid 0.25em var(--color-text);
+  border-right: solid 0.25em var(--color-text);
   position: relative;
 }
 
-.network-nodes::before {
-  content: "";
-  position: absolute;
-  top: 26px;
-  width: 100%;
-  height: 3px;
-  background: var(--color-text);
-  z-index: -1;
-}
-
-.expression-node {
+.network-nodes .disjunctive-node,
+.network-nodes .conjunctive-node {
   display: flex;
-  width: fit-content;
-  height: fit-content;
+  min-width: fit-content;
+  min-height: fit-content;
 }
 
-.OR {
+.network-nodes::before,
+.disjunctive-node::before,
+.conjunctive-node::before {
+  content: "";
+  position: absolute;
+  top: 2em;
+  left: 0em;
+  width: 100%;
+  height: auto;
+  border-top: solid 0.25em var(--color-text);
+  z-index: -1;
+}
+
+.disjunctive-node {
   flex-direction: column;
-  gap: 30px;
+  gap: 2em;
   position: relative;
 }
 
-.OR::before {
+.disjunctive-node > .conjunctive-node {
+  width: 100%;
+}
+
+.disjunctive-node::before {
   content: "";
   position: absolute;
-  width: 3px;
-  height: 87px;
-  right: -3px;
-  bottom: 27px;
-  background-color: var(--color-text);
+  top: 2em;
+  bottom: 1.75em;
+  width: 100%;
+  height: auto;
+  border-right: solid 0.25em var(--color-text);
   z-index: -1;
 }
-.OR::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 3px;
-  bottom: 26px;
-  background-color: var(--color-text);
-  z-index: -1;
+.conjunctive-node {
+  position: relative;
 }
 
 .relay-node {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: var(--color-bg);
-  border-radius: 1px;
-  height: fit-content;
+  height: 4em;
   width: fit-content;
   align-items: center;
   text-align: center;
+  position: relative;
+  gap: 0.5em;
 }
 
 .node-address,
 .node-label {
-  font-size: 12px;
   font-family: var(--font-mono);
   color: var(--color-text-muted);
 }
@@ -82,10 +82,11 @@
 .node-icon {
   cursor: grab;
   font-family: var(--font-mono);
+  background-color: var(--color-bg);
+  margin-left: 1.5em;
+  margin-right: 1.5em;
   font-weight: bold;
-  font-size: 23px;
-  margin-top: 2px;
-  margin-bottom: 6px;
+  font-size: 1.5em;
 }
 
 .node-icon,
